# shortener

./: .gitignore  README.md  start.sh
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-1729afebe800a889bc0a53e69f13c706f88e81c5c2a067719ececb9f8eaaa1dd.json  query-993ad6c671f9ec2b52deeebf6bd12c9840dce90131c7aa0ba5addcb643950f96.json  query-ad42cf6f6dbfaff398302f60670f7c912205fd7cc649c785d329dc2d1b05ca40.json  query-b294eb4fa96435529acbba7d5ca14733fa8f6281fefac727c890ecc6c8e57d3b.json
backend/src/: custom_error.rs  jwt_auth.rs  lib.rs  main.rs
backend/src/api/: auth.rs  handler.rs  url.rs
backend/src/models/: url.rs
backend/target 2/: .rustc_info.json
backend/target 2/debug/.fingerprint/actix-codec-25925ed69a31279e/: lib-actix_codec  lib-actix_codec.json
backend/target 2/debug/.fingerprint/actix-codec-ddffe365f2046eb8/: lib-actix_codec  lib-actix_codec.json
backend/target 2/debug/.fingerprint/actix-cors-efcd8d0b3d2a0100/: lib-actix_cors  lib-actix_cors.json
backend/target 2/debug/.fingerprint/actix-files-4b5ae045de193162/: lib-actix_files  lib-actix_files.json
backend/target 2/debug/.fingerprint/actix-files-bc4f45ea4935a266/: lib-actix_files  lib-actix_files.json
backend/target 2/debug/.fingerprint/actix-http-8da0358136d60c9a/: lib-actix_http  lib-actix_http.json
backend/target 2/debug/.fingerprint/actix-macros-2347d5e61e416cb3/: lib-actix_macros  lib-actix_macros.json
backend/target 2/debug/.fingerprint/actix-macros-a1f1208b109a4194/: lib-actix_macros  lib-actix_macros.json
web/: .env.production  .eslintrc.cjs  Dockerfile  config.ts  (+5 more)
(+1734 files in other folders)
