[package]
#[warn(non_snake_case)]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.6"

# Serialization/Deserialization
serde = "1.0.196"
serde_json = "1.0.113"

# Database and ORM (PostgreSQL)
sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }

# Authentication and security
argon2 = "0.5.0"
jsonwebtoken = "8.2.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }

# Utility libraries
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
base64 = "0.21.0"
futures = "0.3.26"
validator = { version = "0.16", features = ["derive"] }

# Logging, error handling, and tracing
log = "0.4.21"
lazy_static = "1.4.0"
regex = "1.5.6"
derive_more = "0.99.17"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"


[[bin]]
name = "backend"
path = "src/main.rs"
